--- a/src/sass/blocks/_catalog.scss
+++ b/src/sass/blocks/_catalog.scss
@@ -38,12 +38,20 @@
     }
     &__content {
         margin-top: 60px;
+        display: none;
+        justify-content: space-between;
+        flex-wrap: wrap;
+        &_active{
+            display: flex;
+        }
     }
     &__item{
         width: 300px;
         min-height: 440px;
         border: 2px solid #E8E8E8;
         padding: 20px 20px 26px 20px;
+        overflow: hidden;
+        margin-bottom: 20px;
         &__img{
             max-width: 100%;
             height: 200px;
@@ -72,10 +80,12 @@
             font-weight: 500;
             text-decoration: underline;
             text-align: center;
+            text-transform: uppercase;
             &:hover{
                 color:$main-color;
             }
         }
+       
         hr{
             background-color:#E8E8E8;
             margin-top: 19px;
@@ -98,6 +108,72 @@
             font-size: 20px;
             color: #050505;
         }
+        &__wrapper{
+            display: flex;
+            width: calc(200% + 40px);
+        }
+        &__content{
+            width: 50%;
+            margin-right: 0px;
+            transform: translateX(-100%);
+            transition: 0.5s all;
+            &_active{
+                transform: translateX(0%);
+                margin-right: 20px;
+            }
+        }
+        &__list{
+            width: 50%;
+            position: relative;
+            margin-left: 20px;
+            transform: translateX(0%);
+            padding-right: 20px;
+            transition: 0.5s all;
+            padding-left: 19px;
+            margin-bottom: 0;
+            list-style-type: none;
+            &_active{
+                transform: translateX(-100%);
+                margin-left: 0;
+            }
+            & ul{
+                padding-left: 0;
+                list-style: none;
+            }
+        }
+        li{
+            color:#555555;
+            position: relative;
+            font-size: 14px;
+            font-weight: 300;
+            margin-bottom: 20px;
+            &::before{
+                content: '';
+                position: absolute;
+                width: 5px;
+                height: 5px;
+                background-color:$main-color;
+                left: -14px;
+                top: 7px;
+            }
+        }
+        &__back{
+            position: absolute;
+            bottom: 0;
+            left: 50%;
+            transform: translateX(calc(-50% - 19px));
+            display: block;
+            color:$main-color;
+            font-size: 14px;
+            font-weight: 500;
+            text-decoration: underline;
+            text-transform: uppercase;
+            &:hover{
+                color:$main-color;
+            }
+        }
+
+    
 
     }
 }
