--- a/src/sass/blocks/_consultation.scss
+++ b/src/sass/blocks/_consultation.scss
@@ -7,4 +7,13 @@
         font-size: 20px;
         color: #fff;
     }
+    .error{
+        border: 1px solid red;
+        text-align: center;
+        margin-bottom: 15px;
+    }
+    label.error{
+        color:#fff;
+        border:none;
+    }
 }
