--- a/src/sass/blocks/_footer.scss
+++ b/src/sass/blocks/_footer.scss
@@ -49,4 +49,9 @@
             height: 27px;
         }
     }
+    iframe{
+        border:0;
+        width: 100%;
+        height: 100%;
+    }
 }
